@@ -11,6 +11,7 @@ def split_commas(paragraph):
     paragraph['Files'] = '\n' + '\n'.join(
         ' ' + entry.strip() for entry in paragraph['Files'].split(','))
 
+
 try:
     update_deb822(path='debian/copyright', paragraph_cb=split_commas)
 except FileNotFoundError:
